--- a/systemcode/api/package.json
+++ b/systemcode/api/package.json
@@ -5,6 +5,7 @@
     "express": "^4.17.3",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "pg": "^8.7.3"
   },
   "name": "api",
